--- a/ex1/package.json
+++ b/ex1/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "browser-sync": "^2.18.5",
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "vue": "^2.1.8"
   }
 }
